# serializer version: 1
# name: test_setup_platform[legacy_thermostat][climate.thermostat_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 30.0,
      'min_temp': 5.0,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.thermostat_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': None,
    'unique_id': 'c0ffeec0ffee_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_platform[legacy_thermostat][climate.thermostat_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 21.4,
      'friendly_name': 'Thermostat 1',
      'hvac_action': <HVACAction.IDLE: 'idle'>,
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 30.0,
      'min_temp': 5.0,
      'status': dict({
        'override': 0.0,
        'room_temp': 21.42,
        'setpoint': 18.0,
      }),
      'supported_features': <ClimateEntityFeature: 1>,
      'temperature': 18.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.thermostat_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_setup_platform[new_thermostat][climate.thermostat_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 30.0,
      'min_temp': 5.0,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.thermostat_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'incomfort',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': None,
    'unique_id': 'c0ffeec0ffee_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_platform[new_thermostat][climate.thermostat_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 21.4,
      'friendly_name': 'Thermostat 1',
      'hvac_action': <HVACAction.IDLE: 'idle'>,
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 30.0,
      'min_temp': 5.0,
      'status': dict({
        'override': 18.0,
        'room_temp': 21.42,
        'setpoint': 18.0,
      }),
      'supported_features': <ClimateEntityFeature: 1>,
      'temperature': 18.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.thermostat_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
